# symexec

./: Cargo.toml  NOTES.md  README.md
parser_tests/: invalid.sym
src/: lang.rs  main.rs  parser.rs
sym_tests/: div_0.sym  div_0_safe.sym  simple.sym
