[package]
name = "symexec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smtlib = "0.2.0"
smtlib-lowlevel = "0.2.0"
chumsky = { version =  "1.0.0-alpha.7", features = ["pratt", "label"]}
logos = "0.14.0"
clap =  { version = "4.5.9", features = ["derive"] }
ariadne = "0.4.1"
pretty = "0.12.3"
tracing = "0.1.40"
eyre = "0.6.12"
color-eyre = "0.6.3"
tracing-subscriber ={  version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2.0"
tryvial = "0.2.0"
indexmap = "2.2.6"
